<resources>
    <string name="app_name">Riggle Retailer</string>
    <!--<string name="place_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCwPx29lISD18eKQEYzHs-ZFqVpjVfNBKQ&lt;!&ndash;AIzaSyAe89wSeaCjapEyZ6iLO_XD90tkijfD0NU&ndash;&gt;</string>-->
    <string name="place_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCK2aAnZIJ-JCv_-a5AXWn34pyoZCrj49E</string>
    <string name="session_expired">session_expired</string>   <!--AIzaSyCwPx29lISD18eKQEYzHs-ZFqVpjVfNBKQ-->
    <string name="alert">Alert</string>
    <string name="post_detail">Post Detail</string>
    <string name="please_try_again">Please try again</string>
    <string name="plz_wait">Plz wait</string>
    <string name="the_food_place">The food place!</string>
    <string name="enter_you_mobile_nnumber">Enter your mobile\nnumber.</string>
    <string name="please_confirm_your_country"><![CDATA[Please confirm your country code & enter your mobile number to create an account or login.]]></string>
    <string name="by_continuing"><![CDATA[By continuing you may receive an SMS for verification. Message & data rates may apply.]]></string>
    <string name="personal_info">Personal Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="citizinship">Citizenship</string>
    <string name="national_id_number">National Id Number</string>
    <string name="iqama_number">Iqama Number</string>
    <string name="national_id_photo">National Id Photo</string>
    <string name="car_info">Vehicle Info</string>
    <string name="drive_license_number">Driving License Number</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="car_model">Vehicle Model</string>
    <string name="car_year_of_production">Vehicle year of production</string>
    <string name="vehicle_plate_letters">Vehicle Plate letters</string>
    <string name="vehicle_plate_number">Vehicle Plate Number</string>
    <string name="car_photo">Vehicle Photo</string>
    <string name="car_registration_photo">Vehicle Registration Photo</string>
    <string name="working_region_info">Working Region Info</string>
    <string name="working_region">Working Region</string>
    <string name="working_city">Working City</string>
    <string name="living_address">Living Address</string>
    <string name="address">Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account? <font color='#01C6DB'>Login</font></string>
    <string name="by_signing_privacy_policy">By signing up you are ready to accept the <font color='#FECF4C'>privacy policy</font> &amp; <font color='#FECF4C'>terms &amp; conditions</font></string>
    <string name="wrong_code">Wrong code please re-enter the code again</string>
    <string name="drive_license_photo">Driving License Photos</string>
    <string name="account_info">Account info</string>
    <string name="account_info_caps">Account Info</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="logout">Logout</string>
    <string name="phone_number">Phone Number</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="ala_sallam_gave_you_a_rating"><b>Ala sallam</b> <font color='#999999'>gave you a rating</font></string>
    <string name="mobile_number">Mobile Number</string>
    <string name="colin_entered_the_chat"><b>Colin</b> entered the chat</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="not_now_maybe_later">Not now, maybe later</string>
    <string name="get_notifications_for_recieving_new_orders_norder_status_get_directions_announcements">Get notifications for Recieving new orders,\norder status , Get directions, Announcements.</string>
    <string name="you_traveled">You traveled 4.5 km Fewer than yesterday.\n<font color='#FECF4C'>Keep it up!</font></string>
    <string name="you_traveled_weekly">You traveled 100.3 km Fewer than Last week.</string>
    <string name="order_rejected">Order Rejected</string>
    <string name="traveled_distance">Traveled Distance</string>
    <string name="you_traveled_4_5_km">You traveled 4.5 km more than Last Month.</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="available">Available</string>
    <string name="offline">Offline</string>
    <string name="back_press">Back press again for exit</string>
    <string name="number_registered">Number registered</string>
    <string name="scan_of_iqama">Scan of Iqama</string>
    <string name="evidence_of_covid_vaccination">Evidence of COVID vaccination</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="ratings">Ratings</string>
    <string name="wallet">Wallet</string>
    <string name="resend_code">Code is re-sent to your phone</string>
    <string name="nationality">Nationality</string>
    <string name="saudi_arabian">Saudi Arabian</string>
    <string name="indian">Indian</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="status">STATUS</string>
    <string name="appearance">Appearance</string>
    <string name="automatic">Automatic</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="all_fields_required">Please fill all the fields</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="orders">Orders</string>
    <string name="new_orders">New Orders</string>
    <string name="analytics">Analytics</string>
    <string name="profile">Profile</string>
    <string name="sign_in">Sign In</string>
    <string name="skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="credit">Credit</string>
    <string name="cart">Cart</string>
    <string name="view_offer">View Offer</string>
    <string name="edit">Edit</string>
    <string name="view_detail">VIEW DETAILS</string>
    <string name="order_now">ORDER NOW</string>
    <!--Asterik Text-->
    <string name="your_name">Your Name<font color='#D64A5B'>*</font></string>
    <string name="user_name">User Name<font color='#D64A5B'>*</font></string>
    <string name="user_number">User Number<font color='#D64A5B'>*</font></string>
    <string name="business_proof">Business Proof</string>
    <string name="store_name">Store Name<font color='#D64A5B'>*</font></string>
    <string name="pincode">PINCODE<font color='#D64A5B'>*</font></string>
    <string name="store_type">Store Type<font color='#D64A5B'>*</font></string>
    <string name="store_type_without_asterik">Store Type<font color='#D64A5B'>*</font></string>
</resources>
