<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/_15sdp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/your_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/filled_gray_rounded_shape_10"
                android:fontFamily="@font/gilroy_medium"
                android:hint="your name"
                android:padding="@dimen/_10sdp"

                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName"

                app:layout_constraintWidth_percent=".9" />

            <TextView
                android:id="@+id/tvStoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/store_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et" />

            <EditText
                android:id="@+id/etStoreName"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/filled_gray_rounded_shape_10"
                android:fontFamily="@font/gilroy_medium"
                android:hint="store name"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvStoreName"

                app:layout_constraintWidth_percent=".9" />

            <TextView
                android:id="@+id/tvPincode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/pincode"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etStoreName" />

            <EditText
                android:id="@+id/etPincode"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/filled_gray_rounded_shape_10"
                android:fontFamily="@font/gilroy_medium"
                android:hint="pincode"
                android:inputType="number"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPincode"

                app:layout_constraintWidth_percent=".9" />

            <TextView
                android:id="@+id/tvStoreType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/store_type"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPincode" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvStoreType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvStoreType"
                app:spanCount="3"
                tools:itemCount="7"
                tools:listitem="@layout/list_of_store_type" />


            <TextView
                android:id="@+id/tvOthers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/gilroy_medium"
                android:text="Others"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvStoreType" />

            <EditText
                android:id="@+id/etOthers"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/filled_gray_rounded_shape_10"
                android:fontFamily="@font/gilroy_medium"
                android:hint="other"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOthers"

                app:layout_constraintWidth_percent=".9" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
